# RaspPico

./: .gitmodules  README.md
Blink/: CMakeLists.txt  blink.c
WirelessWebPage/public/: index.shtml
WirelessWebPage/src/: CMakeLists.txt  cgi.h  htmldata.c  main.c  ssi.h
scripts/: echo.c
